# rust-oauth2-htmx-shuttle-template

./: .prettierrc  Cargo.toml  README.md
migrations/: 0000_init.sql
src/: main.rs  templates.rs  todo_controller.rs
templates/: base.html.j2  index.html.j2  stream.html.j2  todo.html.j2  todos.html.j2
