[package]
name = "rust-oauth2-htmx-shuttle-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = "1.0.197"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
tokio = "1.28.2"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde_json = "1.0.107"
shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-livereload = "0.9.2"
